Replace getFirst() with get(0) to fix incompatibility with JDK 17 in piecing-it-together